src/objects/Eval__c.object
<CustomObject>
    <description>This object is used to track Evals/Pilots that are in the field</description>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <formula>IF( Projected_Eval_Age__c  &gt;= 150, &quot;Global VP&quot;,  

 IF(Projected_Eval_Age__c  &gt;= 120, &quot;Theater VP&quot;,  

  IF(Projected_Eval_Age__c  &gt;= 90, &quot;Area VP&quot;,  

   IF(Projected_Eval_Age__c  &gt;= 60, &quot;Region Manager&quot;,  

     IF(Projected_Eval_Age__c  &gt;= 30, &quot;Sales Operations&quot;, 

        &quot;Sales Rep&quot;) ) ) ) )</formula>
        <label>Approval Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Requested</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Submission_Date__c</fullName>
        <label>Approval Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Status__c</fullName>
        <label>Completed Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Conversion / Partial Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trunk Unit - Temporary Eval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Age__c</fullName>
        <formula>IF( ISBLANK(Completion_Date__c) , TODAY() -   Eval_Started_On__c , Completion_Date__c -   Eval_Started_On__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eval_Commit_Date__c</fullName>
        <label>Eval Commit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Forecast_Status__c</fullName>
        <label>Eval Forecast Status</label>
        <picklist>
            <picklistValues>
                <fullName>Expected to Convert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expected to Return</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eval_Notes_Archive__c</fullName>
        <label>Eval Notes Archive</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eval_Notes_Last_Updated_By__c</fullName>
        <label>Eval Notes Last Updated By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Notes_Last_Updated_On__c</fullName>
        <label>Eval Notes Last Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Notes__c</fullName>
        <label>Eval Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eval_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Eval Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Evals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eval_Record_Link__c</fullName>
        <formula>&quot;https://login.salesforce.com/&quot;&amp;Id</formula>
        <label>Eval Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eval_Started_On__c</fullName>
        <label>Eval Started On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Status__c</fullName>
        <formula>IF( Eval_Age__c   &gt;= 180, &quot;F - High Priority (past 180 days)&quot;,IF( Eval_Age__c   &gt;= 135, &quot;E - Priority (135-180 days)&quot;, IF( Eval_Age__c   &gt;= 90, &quot;D - High Risk (90-135 days)&quot;,IF( Eval_Age__c   &gt;= 60, &quot;C - At Risk (60-90 days)&quot;,IF( Eval_Age__c   &gt;= 30, &quot;B - Overdue (30-60 days)&quot;,IF(   Eval_Age__c   &gt;= 0, &quot;A - On Schedule (0-30 days)&quot;, &quot;N/A&quot;) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_to_Approver__c</fullName>
        <inlineHelpText>Please provide thorough notes explaining the business need to keep this Eval in the field.</inlineHelpText>
        <label>Notes to Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Evals</relationshipLabel>
        <relationshipName>Evals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Projected_Age__c</fullName>
        <formula>Eval_Commit_Date__c - Eval_Started_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Eval_Age__c</fullName>
        <formula>Eval_Commit_Date__c  -  Eval_Started_On__c</formula>
        <label>Projected Eval Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - RMA issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Conversion commit date is accurate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Return pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Conversion commit date has been pushed out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Rep not providing accurate commit date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Extension not approved, needs RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - Pending extension approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Eval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Eval_Owner__c</columns>
        <columns>Eval_Age__c</columns>
        <columns>Eval_Commit_Date__c</columns>
        <columns>Eval_Forecast_Status__c</columns>
        <columns>Projected_Eval_Age__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Evals</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Eval_Age__c</columns>
        <columns>Eval_Status__c</columns>
        <columns>Eval_Forecast_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Completed_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>My Active Evals</label>
    </listViews>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Eval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>